# solar-energy-advisor

./: README.md  pyproject.toml  report.md
src/solar_energy_advisor/: app.py  crew.py  main.py
src/solar_energy_advisor/config/: agents.yaml  tasks.yaml
